--- a/my-app/src/components/HyperSpeed.css
+++ b/my-app/src/components/HyperSpeed.css
@@ -1,4 +1,4 @@
-#lights {
+/* #lights {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -8,4 +8,23 @@
 canvas {
   width: 100%;
   height: 100%;
+} */
+
+
+
+#lights {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: -1;
+  pointer-events: none;
+}
+
+canvas {
+  width: 100% !important;
+  height: 100% !important;
+  display: block;
 }
